--- a/player.html
+++ b/player.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<script type="text/javascript" src="./three.min.js"></script>
-	  <script type="text/javascript" src="./OBJLoader.js"></script>
-	  <script type="text/javascript" src="./TrackballControls.js"></script>
-	  <script type="text/javascript" src="./player.js"></script>
-	  <link rel="stylesheet" type="text/css" href="./styles.css" />
-	</head>
-	<body>
-		<div id="webgl-player"></div>
-	</body>
+  <head>
+    <script type="text/javascript" src="./js/lib/three.min.js"></script>
+    <script type="text/javascript" src="./js/lib/OBJLoader.js"></script>
+    <script type="text/javascript" src="./js/lib/TrackballControls.js"></script>
+    <script type="text/javascript" src="./js/player.js"></script>
+    <link rel="stylesheet" type="text/css" href="./css/styles.css" />
+  </head>
+  <body>
+    <div id="webgl-player"></div>
+  </body>
 </html>
